edited style of cards and updated readme screenshot

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,18 @@
 body {
   background-color: $favColor !important;
 }
+
+.card-style {
+  height: 325px;
+  width:  300px;
+}
+
+.image-style {
+  height: 325px;
+  width:  300px;
+}
+
+.image-overlay-style {
+  height: 325px;
+  width:  300px;
+}
